opam-version: "2.0"
name:         "minipy"
bug-reports:  "https://github.com/LaurentMazare/ocaml-minipy/issues"
homepage:     "https://github.com/LaurentMazare/ocaml-minipy"
dev-repo:     "git+https://github.com/LaurentMazare/ocaml-minipy.git"
maintainer:   "Laurent Mazare <lmazare@gmail.com>"
authors:      [ "Laurent Mazare" ]

version: "dev"

build: [["dune" "build" "-p" name "-j" jobs]]
install: []
remove:  []

depends: [
  "base" {>= "v0.14" & < "v0.15"}
  "dune" {>= "1.3.0" & build}
  "menhir"
  "ocaml" {>= "4.07"}
  "ocaml-compiler-libs"
  "ppx_custom_printf" {>= "v0.14" & < "v0.15"}
  "ppx_expect" {>= "v0.14" & < "v0.15"}
  "ppx_sexp_conv" {>= "v0.14" & < "v0.15"}
  "ppx_yojson_conv" {>= "v0.14" & < "v0.15"}
  "sexplib" {>= "v0.14" & < "v0.15"}
  "stdio" {>= "v0.14" & < "v0.15"}
  "zarith"
]

depopts: [
]

conflicts: [
]

synopsis: "OCaml minimalist Python-like interpreter"

description: """
A very simple and naive intrepreter for a Python-like language.
"""
