opam-version: "2.0"
name:         "pyast"
bug-reports:  "https://github.com/LaurentMazare/ocaml-pyast/issues"
homepage:     "https://github.com/LaurentMazare/ocaml-pyast"
dev-repo:     "git+https://github.com/LaurentMazare/ocaml-pyast.git"
maintainer:   "Laurent Mazare <lmazare@gmail.com>"
authors:      [ "Laurent Mazare" ]

version: "dev"

build: [["dune" "build" "-p" name "-j" jobs]]
install: []
remove:  []

depends: [
  "base" {>= "v0.12.0"}
  "dune" {>= "1.3.0" & build}
  "menhir"
  "ocaml" {>= "4.07"}
  "ocaml-compiler-libs"
  "stdio" {>= "v.0.12.0"}
  "yojson"
]

depopts: [
]

conflicts: [
]

synopsis: "OCaml library for Python ASTs"

description: """
An OCaml library to manipulate some Python Abstract Syntax Trees.
"""
