(executables
  (names mini_test)
  (modules mini_test)
  (libraries base stdio minipy)
)

(executables
  (names test)
  (modules test)
  (libraries base stdio minipy yojson)
  (preprocess (pps ppx_let ppx_sexp_conv ppx_yojson_conv))
)

(executables
  (names toplevel)
  (modules toplevel)
  (libraries base stdio minipy)
  (preprocess (pps ppx_let ppx_sexp_conv))
)

(executables
  (names toplevel_js)
  (modules toplevel_js)
  (modes js)
  (libraries base stdio js_of_ocaml js_of_ocaml-tyxml minipy)
  (preprocess (pps js_of_ocaml-ppx))
)
