(executables
  (names mini_test)
  (modules mini_test)
  (libraries base stdio minipy)
)

(executables
  (names test)
  (modules test)
  (libraries base stdio minipy yojson)
  (preprocess (pps ppx_let ppx_sexp_conv ppx_yojson_conv))
)

(executables
  (names toplevel)
  (modules toplevel)
  (libraries base stdio minipy)
  (preprocess (pps ppx_let ppx_sexp_conv))
)

(executables
  (names toplevel_js)
  (modules toplevel_js b64)
  (modes byte)
  (libraries base stdio js_of_ocaml js_of_ocaml-tyxml minipy)
  (preprocess (pps js_of_ocaml-ppx))
)

(rule
 (targets toplevel.js)
 (action
  (run %{bin:js_of_ocaml}
   -I .
   --file %{dep:examples.py}
   --disable shortvar
   --noruntime
   +base/runtime.js
   +zarith_stubs_js/biginteger.js
   +zarith_stubs_js/runtime.js
   %{lib:js_of_ocaml-compiler:runtime.js}
   %{dep:toplevel_js.bc}
   -o %{targets}
  )))

(executables
  (names editor_js)
  (modules editor_js)
  (modes byte)
  (libraries base stdio js_of_ocaml js_of_ocaml-tyxml minipy)
  (preprocess (pps js_of_ocaml-ppx))
)

(rule
 (targets editor.js)
 (action
  (run %{bin:js_of_ocaml}
   -I .
   --file %{dep:examples.py}
   --disable shortvar
   --noruntime
   +base/runtime.js
   +zarith_stubs_js/biginteger.js
   +zarith_stubs_js/runtime.js
   %{lib:js_of_ocaml-compiler:runtime.js}
   %{dep:editor_js.bc}
   -o %{targets}
  )))
